<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="140dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_username"
        android:layout_alignStart="@+id/tv_username"
        android:layout_below="@+id/tv_username"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_username"
        android:layout_alignStart="@id/et_username"
        android:layout_below="@id/et_username"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_password"
        android:layout_alignStart="@+id/tv_password"
        android:layout_below="@+id/tv_password"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/cbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password"
        android:layout_below="@+id/et_password"
        android:checked="false"
        android:text="@string/remember_password"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_password"
        android:layout_alignRight="@+id/et_password"
        android:layout_below="@+id/cbox_remember"
        android:text="@string/submit"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_submit"
        android:layout_alignEnd="@+id/cbox_remember"
        android:layout_alignRight="@+id/cbox_remember"
        android:text="@string/signup"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/turtle" />
</RelativeLayout>